# pointviz

./: .gitignore  Dockerfile  Makefile  Project Structure.md  README.md  build.py  config.py  logger.py  main.py  pcd_visualizer.py  pyproject.toml  requirements.txt  setup.py
core/: clipping.py  measurement.py  point_cloud_processor.py  statistics.py
docs/: pcd-visualizer-audit.md
gui/: __init__.py  control_panel.py  dialogs.py  lvx_converter.py  main_window.py  menus.py  point_cloud_processor.py  pyvista_widget.py  statusbar.py  theme_manager.py  visualization_panel.py
packaging/: build_visualizer.bat  visualizer.spec  visualizer_installer.iss
pointviz/: __init__.py  config.py  logger.py  main.py
pointviz/core/: __init__.py  point_cloud_processor.py
pointviz/gui/: __init__.py  control_panel.py  dialogs.py  main_window.py  menus.py  pyvista_widget.py  theme_manager.py  visualization_panel.py
tests/: benchmark_day5.py  benchmark_performance.py  benchmark_tools.py  test_clipping.py  test_measurement.py  test_pcd_visualizer.py
